# sudoku-generator

./: .gitignore  README.md  console_menu.py  pyproject.toml  sudokuBoard.py  usage_example.py
.github/workflows/: python-publish.yml
sudokugen/: __init__.py  core.py  sudoku_board.py
