[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sudokugen"
version = "0.1.0"
description = "Sudoku Generator"
authors = ["Dani Gracia"]
readme = "README.md"
license = "MIT"
packages = [{ include = "sudokugen" }]
keywords = ["sudoku", "generator", "puzzle", "difficulty"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.poetry.urls]
Homepage = "https://github.com/Mind-Training/sudoku-generator"
Repository = "https://github.com/Mind-Training/sudoku-generator"
